# tw-mcp-local-server-claude3-7

./: .env.example  .gitignore  .prettierrc  HYBRID_CONFIGURATION.md  README.md  demo.py  pyproject.toml  requirements.txt
docs/: api.md  installation.md
examples/: sample_mcp_config.py  vibe_coding_example.py
scripts/: setup.py  windows_service.py
src/mcp_server/: __init__.py  azure_integration.py  claude_client.py  cli.py  config.py  hybrid_compute.py  server.py
src/mcp_server/plugins/: __init__.py  brainstorm.py  creativity_surge.py  mindmap.py  perspective_shift.py  vibe_coder.py
tests/: test_basic.py  test_integration.py
